decl template deque

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.19)
 project(ft_containers)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 98)
 
 add_executable(ft_containers
         main.cpp)
+
+add_executable(deque
+        deque/main.cpp
+        )
