--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,14 @@ cmake_minimum_required(VERSION 3.19)
 project(ft_containers)
 
 set(CMAKE_CXX_STANDARD 98)
-
+include_directories(.)
 add_executable(ft_containers
         main.cpp)
 
-add_executable(deque
-        deque/main.cpp
+add_executable(Deque
+        Deque/main.cpp
+        )
+
+add_executable(Vector
+        Vector/main.cpp
         )
