--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ add_executable(Vector
 add_executable(List
         List/main.cpp
         )
-
-add_executable(testiter
-        Iterator/testRandom.cpp
-        )
+#
+#add_executable(testiter
+#        Iterator/testRandom.cpp
+#        )
